commit gwak local 10 : SearchController에서 초성검색 성공